--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,10 @@ body {
     display: inline-block !important;
 }
 
+.col {
+    color: white;
+}
+
 form {
     display: inline-block !important;
 }
@@ -42,13 +46,6 @@ form {
     max-width: 300px;
     padding: 20px;
     color: #444444;
-}
-    
-#right {
-    text-align: right;
-    color:white;
-    max-width: 300px;
-    padding: 20px;
 }
 
 .headline1 {
@@ -65,12 +62,21 @@ form {
     font-size: 22px;
 }
 
+
 #middle {
     padding: 0;
     margin: 0 auto;
     text-align: center;
     max-width: 120px;
 }
+
+#right {
+    text-align: right;
+    color:white;
+    max-width: 300px;
+    padding: 20px;
+}
+
 
 .form {
     background-color: #A9626C;/*#BF6F7A;*/
