--- a/src/style.css
+++ b/src/style.css
@@ -38,8 +38,8 @@ span #max {
 }
 
 img {
-    height: 80px;
-    width: 110px;
+    height: 80;
+    width: 112px;
 /* make image a vector */
 }
 
@@ -108,6 +108,7 @@ p{
     padding-top: 20px;
     color: #444444;
     font-size: 22px;
+    font-family: "Jaldi", sans-serif;
 }
 
 .headline2 {
