--- a/src/style.css
+++ b/src/style.css
@@ -193,9 +193,18 @@ a:hover {
 .smaller {
     font-size: 14px;
     color: #444444;
+    padding-bottom: 10px;
+}
+
+.medium {
+    font-size: 16px;
+    color: #444444;
 }
 
 #bar {
     font-size: 36px;
     color: #444444;    
 }
+
+/* make the placeholder text white */
+::-webkit-input-placeholder{ color: #EBEBEB; }
