try darker colour on input bar

--- a/src/style.css
+++ b/src/style.css
@@ -207,4 +207,4 @@ a:hover {
 }
 
 /* make the placeholder text white */
-::-webkit-input-placeholder{ color: #EBEBEB; }
+::-webkit-input-placeholder{ color: #737373; }
