--- a/src/style.css
+++ b/src/style.css
@@ -172,4 +172,4 @@ a:hover {
     color: #444444;    
 }
 
-::-webkit-input-placeholder{ color: #EBEBEB; }
+::-webkit-input-placeholder{ color: #cccccc; }
