--- a/src/style.css
+++ b/src/style.css
@@ -53,15 +53,15 @@ a:hover {
 #left {
     transform: scale(-1,-1);
     max-width: 300px;
-    padding: 20px;
     color: #444444;
 }
 
 #middle {
-    padding: 0;
+    padding: 10px;
     margin: 0 auto;
     text-align: center;
-    max-width: 120px;
+    max-width: 160px;
+    border: 1px solid #777777;
 }
 
 #right {
