--- a/src/style.css
+++ b/src/style.css
@@ -44,8 +44,6 @@ a:hover {
 #search-area {
     margin-bottom: 40px;
     margin-left: 125px;
-    border: 1px solid #777777;
-
 }
 
 #left {
@@ -98,14 +96,15 @@ a:hover {
     text-align: left;
     padding-top: 20px;
     color: #444444;
-    font-size: 22px;
+    font-size: 20px;
     font-family: "Jaldi", sans-serif;
 }
 
 .headline2 {
+    font-family: "Jaldi", sans-serif;
     display: block;
     color: white;
-    font-size: 22px;
+    font-size: 20px;
 }
 
 form {
@@ -184,15 +183,6 @@ button {
     border: 1px solid #777777;
 }
 
-.locationbar {
-    background-color: transparent;
-
-}
-
-input:focus {
-    outline: none;
-  }
-
 input {
     border-top: none;
     border-left: none;
@@ -201,3 +191,12 @@ input {
     background-color: #BF6F7A;
     color: white; 
 }
+
+
+input.locationbar {
+    background-color: transparent;
+}
+
+input:focus {
+    outline: none;
+  }
