--- a/src/style.css
+++ b/src/style.css
@@ -110,6 +110,7 @@ a:hover {
 form {
     background-color: transparent;
     font-size: 12px;
+    width: 210px;
     font-weight:lighter;
     border-top: none;
     border-left: none;
@@ -119,6 +120,8 @@ form {
     line-height: 18px;
     color: #cccccc;
     float: left;
+    border: 4px solid red;
+
 }
 
 button {
@@ -167,7 +170,7 @@ button {
 
 #bar {
     font-size: 36px;
-    color: #444444;    
+    color: #444444; 
 }
 
 .col-2.prediction {
