--- a/src/style.css
+++ b/src/style.css
@@ -1,47 +1,46 @@
-body {height: 100%;background: linear-gradient(90deg, #e74c3c 50%, #2c3e50 50%)}
+body {height: 100%;background: linear-gradient(90deg, #E74C3C 50%, #2C3E50 50%); font-weight: normal}
 img {height: 100px;width: 140px}
 p {margin-bottom: 0px !important}
-form {background-color: transparent;font-size: 12px;width: 200px;
-    font-weight: lighter;border-top: none;
+form {background-color: #C0392C;font-size: 12px;width: 200px;border-top: none;
     border-left: none;border-right: none;
     margin-right: 0px;margin-bottom: 3px;
-    line-height: 18px;color: #white;float: left}
-button {background-color: #e74c3c;border-top: none;
-    border-left: none;border-right: 2px solid #2c3e50;
-    border-bottom: 2px solid #2c3e50;color: #e74c3c;
+    line-height: 18px;float: left}
+button {background-color: #E74C3C;border-top: none;
+    border-left: none;border-right: 2px solid #2C3E50;
+    border-bottom: 2px solid #2C3E50;color: #E74C3C;
     font-size: small;width: 24px;margin: 0 auto;line-height: 18px;
     float: right}
 input {border-top: none;border-left: none;border-right: none;
-    border-bottom: 2px solid #2c3e50;
-    background-color: #c0392b;color: white}
-input.locationbar {background-color: transparent}
+    border-bottom: 2px solid #2C3E50;
+    background-color: #C0392C;color: white}
+input.locationbar {background-color: #C0392C}
 input:focus {outline: none}
-a:link {color: #7f8c8d;text-decoration: none}
-a:visited {color: #2c3e50;text-decoration: none}
-a:hover {color: white;text-decoration: none}
-a.active {color: white;cursor: default}
+a:link {color: #95afc0;text-decoration: none}
+a:visited {color: #2C3E50;text-decoration: none}
+a:hover {color: #dff9fb;text-decoration: none}
+a.active {color: #dff9fb;cursor: default}
 #search-area {margin-bottom: 30px;margin-left: 125px}
-#left {transform: scale(-1,-1);max-width: 300px;color: #2c3e50;}
+#left {transform: scale(-1,-1);max-width: 300px;color: #2C3E50;}
 #middle {padding: 10px;margin: 0 auto;max-width: 160px;}
-#right {color: white;max-width: 300px;}
+#right {color: #dff9fb;max-width: 300px;}
 #name-temp {text-align: left}
-#bar {font-size: 36px;color: #7f8c8d}
+#bar {font-size: 36px;color: #95afc0}
 .date {opacity: 0.6}
 .min {text-align: left;opacity: 0.6}
 .max {font-weight: bold;text-align: right}
 .container {max-width: 700px}
 .box {display: inline-block !important;margin-left: 15px;margin-top: 0}
-.insidebox {width: 176px}
-.col {color: white}
+.insidebox {width: 176px;}
+.col {color: #dff9fb}
 .headline1 {display: block;text-align: left;padding-top: 20px;
-    color: #2c3e50;font-size: 20px;font-family: "Jaldi", sans-serif}
+    color: #2C3E50;font-size: 20px;font-family: "Jaldi", sans-serif}
 .headline2 {font-family: "Jaldi", sans-serif;
-    display: block;color: white;font-size: 20px}
-.button:hover {border: 1px solid #2c3e50}
+    display: block;color: #dff9fb;font-size: 20px}
+.button:hover {border: 1px solid #2C3E50}
 .prediction-description-area {text-align: right;font-size: 12px}
 .big {font-size: 36px;font-weight: bold}
 .big-icon {font-size: 56px}
-.smaller {font-size: 14px;color: #2c3e50;padding-bottom: 10px}
-.medium {font-size: 16px;color: #2c3e50}
+.smaller {font-size: 14px;color: #2C3E50;padding-bottom: 10px}
+.medium {font-size: 16px;color: #2C3E50}
 .col-2.prediction {font-size: 10px;margin: 0 auto;padding: 0;
     text-align: center;border: 1px solid #7f8c8d;max-width: 50px}
