--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,19 @@
-body {height: 100%;background: linear-gradient(90deg, #E74C3C 50%, #2C3E50 50%); font-weight: normal}
+body {height: 100%;background: linear-gradient(90deg, #E74C3C 50%, #2C3E50 50%);
+    font-weight: normal}
 img {height: 100px;width: 140px}
 p {margin-bottom: 0px !important}
-form {background-color: #C0392C;font-size: 12px;width: 200px;border-top: none;
+form {background-color: #2C3E50;font-size: 12px;
+    width: 201px;border-top: none; padding-left: 1px;
     border-left: none;border-right: none;
     margin-right: 0px;margin-bottom: 3px;
     line-height: 18px;float: left}
 button {background-color: #E74C3C;border-top: none;
     border-left: none;border-right: 2px solid #2C3E50;
-    border-bottom: 2px solid #2C3E50;color: #E74C3C;
+    border-bottom: 1px solid #2C3E50;color: #E74C3C;
     font-size: small;width: 24px;margin: 0 auto;line-height: 18px;
     float: right}
 input {border-top: none;border-left: none;border-right: none;
-    border-bottom: 2px solid #2C3E50;
+    border-bottom: 3px solid #2C3E50;
     background-color: #C0392C;color: white}
 input.locationbar {background-color: #C0392C}
 input:focus {outline: none}
@@ -25,7 +27,6 @@ a.active {color: #dff9fb;cursor: default}
 #right {color: #dff9fb;max-width: 300px;}
 #name-temp {text-align: left}
 #bar {font-size: 36px;color: #95afc0}
-.date {opacity: 0.6}
 .min {text-align: left;opacity: 0.6}
 .max {font-weight: bold;text-align: right}
 .container {max-width: 700px}
@@ -36,7 +37,9 @@ a.active {color: #dff9fb;cursor: default}
     color: #2C3E50;font-size: 20px;font-family: "Jaldi", sans-serif}
 .headline2 {font-family: "Jaldi", sans-serif;
     display: block;color: #dff9fb;font-size: 20px}
-.button:hover {border: 1px solid #2C3E50}
+.button:hover {border-top: 2px 
+    solid #2C3E50; border-bottom: 0;
+    border-right:0; border-left: 3px solid #2C3E50}
 .prediction-description-area {text-align: right;font-size: 12px}
 .big {font-size: 36px;font-weight: bold}
 .big-icon {font-size: 56px}
