--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {height: 100%;background: linear-gradient(90deg, #E74C3C 50%, #2C3E50 50%);
 img {height: 100px;width: 140px}
 p {margin-bottom: 0px !important}
 form {background-color: #2C3E50;font-size: 12px;
-    width: 201px;border-top: none; padding-left: 3px;
+    width: 201px;border-top: none; padding-left: 1px;
     border-left: none;border-right: none;
     margin-right: 0px;margin-bottom: 3px;
     line-height: 18px;float: left}
@@ -13,6 +13,7 @@ button {background-color: #E74C3C;border-top: none;
     font-size: small;width: 24px;margin: 0 auto;line-height: 18px;
     float: right}
 input {border-top: none;border-left: none;border-right: none;
+    padding-left: 5px;
     border-bottom: 3px solid #2C3E50;
     background-color: #C0392C;color: white}
 input.locationbar {background-color: #C0392C}
