--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {height: 100%;background: linear-gradient(90deg, #E74C3C 50%, #2C3E50 50%);
     font-weight: normal}
-img {height: 100px;width: 140px}
+img {margin-top:40px;height: 100px;width: 140px}
 p {margin-bottom: 0px !important}
 form {background-color: #2C3E50;font-size: 12px;
     width: 201px;border-top: none; padding-left: 1px;
@@ -23,14 +23,14 @@ a:visited {color: #2C3E50;text-decoration: none}
 a:hover {color: #dff9fb;text-decoration: none}
 a.active {color: #dff9fb;cursor: default}
 #search-area {margin-bottom: 30px;margin-left: 125px}
-#left {transform: scale(-1,-1);max-width: 300px;color: #2C3E50;}
-#middle {padding: 10px;margin: 0 auto;max-width: 160px;}
-#right {color: #dff9fb;max-width: 300px;}
+#left {transform: scale(-1,-1);max-width: 40%;color: #2C3E50}
+#middle {padding: 10px;margin: 0 auto;max-width: 20%;}
+#right {color: #dff9fb;max-width: 40%;}
 #name-temp {text-align: left}
 #bar {font-size: 36px;color: #95afc0}
 .min {text-align: left;opacity: 0.6}
 .max {font-weight: bold;text-align: right}
-.container {max-width: 700px}
+.container {max-width: 70%}
 .box {display: inline-block !important;margin-left: 15px;margin-top: 0}
 .insidebox {width: 176px;}
 .col {color: #dff9fb}
@@ -41,10 +41,10 @@ a.active {color: #dff9fb;cursor: default}
 .button:hover {border-top: 2px 
     solid #2C3E50; border-bottom: 0;
     border-right:0; border-left: 3px solid #2C3E50}
-.prediction-description-area {text-align: right;font-size: 12px}
+.prediction-description-area {text-align: right;font-size: 12px; margin: 0 auto; padding:0}
+#last-five-days {font-size: 12px;text-align: center;  
+    margin-top: 15px;margin-left: 40px}
 .big {font-size: 36px;font-weight: bold}
 .big-icon {font-size: 56px}
 .smaller {font-size: 14px;color: #2C3E50;padding-bottom: 10px}
 .medium {font-size: 16px;color: #2C3E50}
-.col-2.prediction {font-size: 10px;margin: 0 auto;padding: 0;
-    text-align: center;border: 1px solid #7f8c8d;max-width: 50px}
