--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {height: 100%;background: linear-gradient(90deg, #E74C3C 50%, #2C3E50 50%);
     font-weight: normal}
-img {margin-top:40px;height: 100px;width: 140px}
+img {height: 100px;width: 140px;  padding: 0, margin: 0 auto;}
 p {margin-bottom: 0px !important}
 form {background-color: #2C3E50;font-size: 12px;
     width: 201px;border-top: none; padding-left: 1px;
@@ -12,7 +12,8 @@ button {background-color: #E74C3C;border-top: none;
     border-bottom: 8px solid #2C3E50;color: #E74C3C;
     font-size: small;width: 24px;margin: 0 auto;line-height: 18px;
     float: right}
-input {border-top: none;border-left: 1px solid #2C3E50;border-right: none;
+input {border-top: none;border-left: 1px solid #2C3E50;
+    border-right: none;
     padding-left: 5px;
     border-bottom: 8px solid #2C3E50;
     background-color: #C0392C;color: white}
@@ -23,14 +24,15 @@ a:visited {color: #2C3E50;text-decoration: none}
 a:hover {color: #dff9fb;text-decoration: none}
 a.active {color: #dff9fb;cursor: default}
 #search-area {margin-bottom: 30px;margin-left: 125px}
-#left {transform: scale(-1,-1);max-width: 40%;color: #2C3E50}
-#middle {padding: 10px;margin: 0 auto;max-width: 20%;}
-#right {color: #dff9fb;max-width: 40%;}
+#left {width:40%;transform: scale(-1,-1);color: #2C3E50}
+#middle {width:20%; 
+    padding: 0; margin: 0 auto; display: block;text-align: center}
+#right {width: 40%;color: #dff9fb}
 #name-temp {text-align: left}
 #bar {font-size: 36px;color: #95afc0}
-.min {text-align: left;opacity: 0.6}
-.max {font-weight: bold;text-align: right}
-.container {max-width: 70%}
+.container {max-width: 800px;min-width:500px}
+.min {opacity: 0.6}
+.max {font-weight: bold}
 .box {display: inline-block !important;margin-left: 15px;margin-top: 0}
 .insidebox {width: 176px;}
 .col {color: #dff9fb}
@@ -41,10 +43,10 @@ a.active {color: #dff9fb;cursor: default}
 .button:hover {border-top: 2px 
     solid #2C3E50; border-bottom: none;
     border-right:0; border-left: 3px solid #2C3E50}
-.prediction-description-area {text-align: right;font-size: 12px; margin: 0 auto; padding:0}
-#last-five-days {font-size: 12px;text-align: center;  
-    margin-top: 15px;margin-left: 40px}
+.prediction-description-area {text-align: right;font-size: 12px}
+#last-five-days {padding-left: 10px; color: white; font-size: 10px;text-align: center;margin-top: 10px}
 .big {font-size: 36px;font-weight: bold}
 .big-icon {font-size: 56px}
 .smaller {font-size: 14px;color: #2C3E50;padding-bottom: 10px}
 .medium {font-size: 16px;color: #2C3E50}
+
