--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,6 @@ a.active {color: #dff9fb;cursor: default}
 #last-five-days {padding-left: 10px; color: white; font-size: 10px;text-align: center;margin-top: 10px}
 .big {font-size: 36px;font-weight: bold}
 .big-icon {font-size: 56px}
-.smaller {font-size: 14px;color: #2C3E50;padding-bottom: 10px}
+.smaller {font-size: 14px;color: #2C3E50;padding-bottom: 10px; position: fixed; bottom: 0;}
 .medium {font-size: 16px;color: #2C3E50}
 
