--- a/src/style.css
+++ b/src/style.css
@@ -20,10 +20,16 @@ input {border-top: none;border-left: 1px solid #2C3E50;
     background-color: #C0392C;color: white}
 input.locationbar {background-color: #C0392C}
 input:focus {outline: none}
+
 a:link {color: #95afc0;text-decoration: none}
-a:visited {color: #95AFC0;text-decoration: none}
+a:visited {color: #95afc0;text-decoration: none}
 a:hover {color: #dff9fb;text-decoration: none}
+
 a.active {color: #dff9fb;cursor: default}
+
+p a:link {color: #2C3E50;text-decoration: none}
+p a:visited {color: #2C3E50;text-decoration: none}
+p a:hover {color: #dff9fb;text-decoration: none}
 #search-area {margin-bottom: 30px;margin-left: 125px}
 #left {width:40%;transform: scale(-1,-1);color: #2C3E50}
 #middle {width:20%; 
