--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ form {background-color: #2C3E50;width: 201px;border-top: none; padding-left: 1px
 button {background-color: #E74C3C;border-top: none;border-left: none;border-right: 2px solid #2C3E50;border-bottom: 8px solid #2C3E50;color: #E74C3C;width: 24px;margin: 0 auto;line-height: 18px;float: right}
 input {border-top: none;border-left: 1px solid #2C3E50;border-right: none;padding-left: 5px;border-bottom: 8px solid #2C3E50;background-color: #C0392C;color: white}
 input:focus {outline: none}
-a.active {color: #dff9fb;cursor: default}
+h2 a.active {color: #dff9fb;cursor: default}
 a:link {color: #95afc0;text-decoration: none}
 a:visited {color: #95afc0;text-decoration: none}
 a:hover {color: #dff9fb;text-decoration: none}
