--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ p a:hover {color: #dff9fb;text-decoration: none}
 .box {display: inline-block;margin-left: 15px;margin-top: 0}
 .insidebox {width: 154px;}
 .col {color: #dff9fb}
-.headline1 {background:#E74C3C;display: block;text-align: left;padding-top: 20px;color: #2C3E50;font-size:20px;font-family: "Jaldi", sans-serif}
+.headline1 {display: block;text-align: left;padding-top: 20px;color: #2C3E50;font-size:20px;font-family: "Jaldi", sans-serif}
 .headline2 {font-family: "Jaldi", sans-serif;display: block;color: #dff9fb;font-size: 20px}
 .button:hover {border-top: 2px solid #2C3E50;border-bottom: none;border-right:0; border-left: 3px solid #2C3E50}
 .prediction-description-area {text-align: right}
